--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,25 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #d5d5d5;
+        --foreground: #ededed;
+    }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    color: var(--foreground);
+    background: var(--background);
+    font-family: 'Courier New', Courier, monospace;
+    height: 100vh; /* Zapewni, że tło obejmuje cały ekran */
+    background-image: url("../assets/db-image.png"), url("../assets/anaconda-image.png");
+    background-position: 20% 120%, 98% 0%;
+    background-repeat: no-repeat, no-repeat;
+    background-attachment: scroll, scroll;
 }
+
