--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --background: #d5d5d5;
+        --background: #000000;
         --foreground: #ededed;
     }
 }
