--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,12 @@ body {
     background-attachment: scroll, scroll;
 }
 
+#particles canvas {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
